@@ -30,6 +30,7 @@
 #    3-Aug-2022  dwp Enable retrieval of specific computed-model files with input
 #    2-Feb-2023  dwp add support for requesting specific inputIdCodeList/idCodeList for CSMs
 #   12-Jun-2023  dwp disable useCache for holdings files to force fresh re-download
+#    5-Mar-2024  dwp Adjustments to support BCIF loading and CSM scaling (eliminate need to import CSM holdings file)
 ##
 """
 Utilities for scanning and accessing data in PDBx/mmCIF data in common repository file systems or via remote repository services.
@@ -269,9 +270,12 @@ class RepositoryProvider(object):
         cL = []
         try:
             if isinstance(locatorObj, str):
+                if locatorObj.lower().endswith(".bcif.gz") or locatorObj.lower().endswith(".bcif"):
+                    fmt = "bcif"
+                logger.debug("locatorObj %s fmt %s", locatorObj, fmt)
                 cL = self.__mU.doImport(locatorObj, fmt=fmt)
                 if not cL:
-                    logger.warning("locator %r returns empty container list.", locatorObj)
+                    logger.warning("locator %r fmt %s returns empty container list.", locatorObj, fmt)
                 return cL if cL else []
             elif isinstance(locatorObj, (list, tuple)) and locatorObj:
                 dD = locatorObj[0]
@@ -375,7 +379,8 @@ class RepositoryProvider(object):
             elif contentType in ["ihm_dev", "ihm_dev_core", "ihm_dev_full"]:
                 outputLocatorList = self.__getIhmDevPathList()
             elif contentType in ["pdbx_comp_model_core"]:
-                outputLocatorList = self.__getCompModelPathList(idCodeList=idCodeList)
+                outputLocatorList = self.__getCompModelPathList(idCodeList=idCodeList, fmt="mmcif")
+                # outputLocatorList = self.__getCompModelPathList(idCodeList=idCodeList, fmt="bcif")
             else:
                 logger.warning("Unsupported contentType %s", contentType)
 
@@ -785,9 +790,13 @@ class RepositoryProvider(object):
         _ = procName
         _ = workingDir
         topRepoPath = optionsD["topRepoPath"]
+        modelFormat = optionsD["modelFormat"]
         pathList = []
-        for modelPath in dataList:
-            pathList.append(os.path.join(topRepoPath, modelPath))
+        for modelId in dataList:
+            modelSourcePrefix, firstDir, secondDir = modelId[0:2], modelId[-6:-4], modelId[-4:-2]
+            internalModelName = modelId + modelFormat
+            modelPathFromPrefixDir = os.path.join(modelSourcePrefix, firstDir, secondDir, internalModelName)
+            pathList.append(os.path.join(topRepoPath, modelPathFromPrefixDir))
         return dataList, pathList, []
 
     def __getEntryPathList(self):
@@ -1186,10 +1195,10 @@ class RepositoryProvider(object):
         return outPathList
         #
 
-    def __getCompModelPathList(self, idCodeList=None):
-        return self.__fetchModelPathList(self.__getRepoLocalPath("pdbx_comp_model_core"), idCodeList=idCodeList, numProc=self.__numProc)
+    def __getCompModelPathList(self, idCodeList=None, fmt="mmcif"):
+        return self.__fetchModelPathList(self.__getRepoLocalPath("pdbx_comp_model_core"), idCodeList=idCodeList, fmt=fmt, numProc=self.__numProc)
 
-    def __fetchModelPathList(self, topRepoPath, idCodeList=None, numProc=8):
+    def __fetchModelPathList(self, topRepoPath, idCodeList=None, fmt="mmcif", numProc=8):
         """Get the path list for computational models in the input cached model repository
 
         TO-DO: Add check of cache file to see if it changed between the last time data was uploaded, and if so, then upload new models
@@ -1204,29 +1213,30 @@ class RepositoryProvider(object):
         idCodeList = idCodeList if idCodeList else []
         pathList = []
         try:
-            compModelCacheFile, cacheFmt, compressed = self.__getCompModelCachPath()
-            if not compModelCacheFile:
-                logger.info("Failed to determine path of computed-models cache file. Returning empty pathList.")
-                return pathList
-            if cacheFmt == "pickle" and compressed:
-                compModelCacheFile = self.__fU.uncompress(compModelCacheFile)
-            compModelCacheD = self.__mU.doImport(compModelCacheFile, fmt=cacheFmt)
-            #
-            dataList = []
-            if len(idCodeList) > 0:
-                for mId in idCodeList:
-                    dataList.append(compModelCacheD[mId]["modelPath"])
-            else:
-                for _, modelD in compModelCacheD.items():
-                    dataList.append(modelD["modelPath"])
-            logger.info("Computed-models loaded dataList length: %d", len(dataList))
+            # compModelCacheFile, cacheFmt, compressed = self.__getCompModelCachPath()
+            # if not compModelCacheFile:
+            #     logger.info("Failed to determine path of computed-models cache file. Returning empty pathList.")
+            #     return pathList
+            # if cacheFmt == "pickle" and compressed:
+            #     compModelCacheFile = self.__fU.uncompress(compModelCacheFile)
+            # compModelCacheD = self.__mU.doImport(compModelCacheFile, fmt=cacheFmt)
+            # #
+            # dataList = []
+            # if len(idCodeList) > 0:
+            #     for mId in idCodeList:
+            #         dataList.append(compModelCacheD[mId]["modelPath"])
+            # else:
+            #     for _, modelD in compModelCacheD.items():
+            #         dataList.append(modelD["modelPath"])
+            # logger.info("Computed-models loaded dataList length: %d", len(dataList))
             #
             optD = {}
             optD["topRepoPath"] = topRepoPath
+            optD["modelFormat"] = ".bcif.gz" if "bcif" in fmt.lower() else ".cif.gz"
             mpu = MultiProcUtil(verbose=self.__verbose)
             mpu.setOptions(optionsD=optD)
             mpu.set(workerObj=self, workerMethod="_compModelPathWorker")
-            _, _, retLists, _ = mpu.runMulti(dataList=dataList, numProc=numProc, numResults=1)
+            _, _, retLists, _ = mpu.runMulti(dataList=idCodeList, numProc=numProc, numResults=1)
             pathList = retLists[0]
             endTime0 = time.time()
             logger.debug("Path list length %d  in %.4f seconds", len(pathList), endTime0 - startTime)
@@ -1234,50 +1244,50 @@ class RepositoryProvider(object):
             logger.exception("Failing with %s", str(e))
         return self.__applyLimit(pathList)
 
-    def __getCompModelCachPath(self):
-        """Convenience method to return path for computed-model cache file (json or pickle),
-        which contains the list of all computed-models in storage area.
-        """
-        pth = None
-        fmt = None
-        compressed = False
-        try:
-            pth = self.__cfgOb.getPath("PDBX_COMP_MODEL_CACHE_LIST_PATH", sectionName=self.__configName)
-            if pth.endswith(".pic") or pth.endswith(".pic.gz"):
-                fmt = "pickle"
-            elif pth.endswith(".json") or pth.endswith(".json.gz"):
-                fmt = "json"
-            else:
-                logger.warning("Unsupported format/extension for computed-model cache file %s", pth)
-            if pth.endswith(".gz"):
-                compressed = True
-        except Exception as e:
-            logger.exception("Failing with %s", str(e))
-        return pth, fmt, compressed
+    # def __getCompModelCachPath(self):
+    #     """Convenience method to return path for computed-model cache file (json or pickle),
+    #     which contains the list of all computed-models in storage area.
+    #     """
+    #     pth = None
+    #     fmt = None
+    #     compressed = False
+    #     try:
+    #         pth = self.__cfgOb.getPath("PDBX_COMP_MODEL_CACHE_LIST_PATH", sectionName=self.__configName)
+    #         if pth.endswith(".pic") or pth.endswith(".pic.gz"):
+    #             fmt = "pickle"
+    #         elif pth.endswith(".json") or pth.endswith(".json.gz"):
+    #             fmt = "json"
+    #         else:
+    #             logger.warning("Unsupported format/extension for computed-model cache file %s", pth)
+    #         if pth.endswith(".gz"):
+    #             compressed = True
+    #     except Exception as e:
+    #         logger.exception("Failing with %s", str(e))
+    #     return pth, fmt, compressed
 
-    def getCompModelIdMap(self):
-        return self.__fetchCompModelIdMap()
+    # def getCompModelIdMap(self):
+    #     return self.__fetchCompModelIdMap()
 
-    def __fetchCompModelIdMap(self):
-        """Get the ID mapping between the source model IDs and internal model identifiers for computational models.
-        """
-        #
-        compModelIdMapD = {}
-        try:
-            compModelCacheFile, cacheFmt, compressed = self.__getCompModelCachPath()
-            if not compModelCacheFile:
-                logger.info("Failed to determine path of computed-models cache file. Returning empty compModelIdMapD.")
-                return compModelIdMapD
-            if cacheFmt == "pickle" and compressed:
-                compModelCacheFile = self.__fU.uncompress(compModelCacheFile)
-            compModelCacheD = self.__mU.doImport(compModelCacheFile, fmt=cacheFmt)
-            for internalModelId, modelD in compModelCacheD.items():
-                compModelIdMapD.update({modelD["sourceId"]: internalModelId})
-            logger.info("Computed-models mapped ID length: %d", len(compModelIdMapD))
-            #
-        except Exception as e:
-            logger.exception("Failing with %s", str(e))
-        return compModelIdMapD
+    # def __fetchCompModelIdMap(self):
+    #     """Get the ID mapping between the source model IDs and internal model identifiers for computational models.
+    #     """
+    #     #
+    #     compModelIdMapD = {}
+    #     try:
+    #         compModelCacheFile, cacheFmt, compressed = self.__getCompModelCachPath()
+    #         if not compModelCacheFile:
+    #             logger.info("Failed to determine path of computed-models cache file. Returning empty compModelIdMapD.")
+    #             return compModelIdMapD
+    #         if cacheFmt == "pickle" and compressed:
+    #             compModelCacheFile = self.__fU.uncompress(compModelCacheFile)
+    #         compModelCacheD = self.__mU.doImport(compModelCacheFile, fmt=cacheFmt)
+    #         for internalModelId, modelD in compModelCacheD.items():
+    #             compModelIdMapD.update({modelD["sourceId"]: internalModelId})
+    #         logger.info("Computed-models mapped ID length: %d", len(compModelIdMapD))
+    #         #
+    #     except Exception as e:
+    #         logger.exception("Failing with %s", str(e))
+    #     return compModelIdMapD
 
     def __getIhmDevPathList(self):
         return self.__fetchIhmDevPathList(self.__getRepoLocalPath("ihm_dev"))
